--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,5 +17,12 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.dark{
+  --backgroud:var(--foreground);
+}
+.white{
+  --backgroud:var(--background)
 }
