feat:added leaning feature

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,15 @@ body {
 .white{
   --backgroud:var(--background)
 }
+.custom-handle {
+  width: 100%;
+  height: 5px; /* Increase handle size */
+  background-color: #ffffffb7; /* Yellow for visibility */
+  cursor: ns-resize; /* Vertical resize cursor */
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.custom-handle:hover {
+  background-color: #3301ff; /* Brighter yellow on hover */
+}
